2022-02-14  Fujii Hironori  <Hironori.Fujii@sony.com>

        run-jsc-stress-tests reports "in `<module:URI>': uninitialized class variable @@schemes in URI (NameError)" with Ruby 3.1
        https://bugs.webkit.org/show_bug.cgi?id=236281

        Reviewed by Yusuke Suzuki.

        Ruby 3.1.0 removed @@schemes and added URI.register_scheme.

        * Scripts/run-jsc-stress-tests: Added `register_scheme` class
        method if not exists. Use the register_scheme method for ssh.

2022-02-14  Tim Nguyen  <ntim@apple.com>

        Don't perform layout in WKBundlePagePostSynchronousMessageForTesting
        https://bugs.webkit.org/show_bug.cgi?id=236579

        Reviewed by Brady Eidson.

        This turned out to be a problem for bug 22722, which introduced the WithLayout::No workaround.

        r188793 introduced this layoutIfNeeded call specifically for UI event messages, so only perform the
        layout in that specific case. Also remove the workaround introduced in bug 22722.

        * WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
        * WebKitTestRunner/InjectedBundle/InjectedBundle.h:
        (WTR::postSynchronousPageMessage):
        * WebKitTestRunner/InjectedBundle/TestRunner.cpp:
        (WTR::postSynchronousPageMessageWithReturnValue):
        (WTR::TestRunner::grantWebNotificationPermission):
        (WTR::TestRunner::denyWebNotificationPermission):

2022-02-11  Jonathan Bedard  <jbedard@apple.com>

        [EWS] Re-enable build retry for PRs
        https://bugs.webkit.org/show_bug.cgi?id=236300
        <rdar://problem/88628832>

        Reviewed by Aakash Jain.

        * CISupport/ews-build/steps.py:
        (AnalyzeCompileWebKitResults.analyzeResults): Enable retry for PRs with failing builds.
        (CleanGitRepo.run): Abort any failed rebases.
        * CISupport/ews-build/steps_unittest.py:

2022-02-13  Brady Eidson  <beidson@apple.com>

        Implement ServiceWorkerRegistration.showNotification()